--- a/about_us/index.html
+++ b/about_us/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<!---Coding By CoderGirl!--->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!--<title> An About Us Page | Community Connect </title>-->
-  <!---Custom Css File!--->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,25 +14,25 @@
 			<img src="person1.jpg" alt="Person 1">
 			<h3>Mercy Wanjohi</h3>
 			<p>Data Scientist</p>
-			<p>Mercy is a visionary leader with a passion for innovation and technology. She's a computer science student at Kibo School and wants to be a data scientist.</p>
+			<p>Mercy is a visionary leader with a passion for innovation and technology. She's a computer science student at Kibo School and wants to be a data scientist.She loves to vlunteer at animal shelters in her free time.</p>
         </div>
 		<div class="person">
-			<img src="person2.jpg" alt="Person 2">
+			<img src="about_us\travor" alt="Person 2">
 			<h3>Travor Oguna</h3>
 			<p>Software Developer</p>
-			<p>Travor is a software developer with over 2 years of experience. He's a python enthusiast and likes to code for fun! </p>
+			<p>Travor is a software developer with over 2 years of experience. He's a python enthusiast and he coaches young people multiple programming languages during his free time </p>
 		</div>
 		<div class="person">
 			<img src="person3.jpg" alt="Person 3">
-			<h3>Marcus</h3>
+			<h3>Marcus Otunba</h3>
 			<p>Front-end Engineer</p>
-			<p>Marcus is a talented Front-end developer with a passion for coding. He is proficient with Js node and loves a good challenge.</p>
+			<p>Marcus is a skilled software engineer in the Information Technology Industry for more than three years of experience, he has built a solid background in both front-end and back-end development with expertise in multiple programming languages, databases and frameworks.</p>
 		</div>
         <div class="person">
 			<img src="person4.jpg" alt="Person 4">
 			<h3>Samuel Kabuya</h3>
 			<p>Designer</p>
-			<p>Samuel is an accountant and a cyber security enthusiast.</p>
+			<p>Samuel is an accountant and a cyber security enthusiast.He's also working on helping women from low income households access sanitary towels.</p>
 		</div>
 	</div>
 </body>
